--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
 	runtime('org.hsqldb:hsqldb')
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+	testCompile('org.mockito:mockito-all') 
 }
 
 eclipse {
