--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #logging.level.org.springframework.web: DEBUG
 #logging.level.org.apache.tiles: DEBUG
 
-spring.jpa.hibernate.ddl-auto:create
+spring.jpa.hibernate.ddl-auto:create-update
 spring.jpa.hibernate.naming_strategy:org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.database:HSQL
 spring.jpa.show-sql:true
